syntax = "proto3";

import "product.proto";
import "user.proto";

service BalancerService {
    rpc GetProduct (ProductIdRequest) returns (ProductResponse) {}
    rpc GetAllProducts (GetAllRequest) returns (ProductsList) {}
    rpc GetProducts (ProductIds) returns (ProductsList) {}
    rpc GetPing (Ping) returns (Pong) {}
    rpc AddProduct(Product) returns (AddProductResponse) {}
    rpc AddItem (AddItemRequest) returns (AddItemResponse) {}
    rpc AddUser (User) returns (AddUserResponse) {}
    rpc GetUser (UserId) returns (GetUserResponse) {}
    rpc GetAllUsers (GetAllRequest) returns (GetAllUsersResponse) {}
    rpc GetWishList (UserId) returns (ProductIds) {}
    rpc GetWishListWithDescription (UserId) returns (ProductsList) {}
}
